file(GLOB crt_include "crt/*.h")
file(GLOB crt_inl "crt/*.inl")
file(GLOB crt_sys_include "crt/sys/*.h")
file(GLOB crt_sec_api_include "crt/sec_api/*.h")
file(GLOB crt_sec_api_sys_include "crt/sec_api/sys/*.h")
file(GLOB include_gdiplus "include/gdiplus/*.h")
file(GLOB include_gl "include/GL/*.h")
file(GLOB include_psdk_inc "include/psdk_inc/*.h")
file(GLOB include_wrl "include/wrl/*.h")
file(GLOB include_wrl_wrappers "include/wrl/wrappers/*.h")
file(GLOB include_h "include/*.h")
file(GLOB include_hxx "include/*.hxx")
file(GLOB include_idl "include/*.idl")
file(GLOB include_dlg "include/*.dlg")
file(GLOB include_rh "include/*.rh")
file(GLOB ddk_include "ddk/include/*.h")
file(GLOB ddk_include_ddk "ddk/include/ddk/*.h")
file(GLOB dx_include_h "direct-x/include/*.h")
file(GLOB dx_include_idl "direct-x/include/*.idl")
file(GLOB dx_include_inl "direct-x/include/*.inl")

install(FILES ${crt_include} DESTINATION "mingw/include")
install(FILES ${crt_inl} DESTINATION "mingw/include")
install(FILES ${crt_sys_include} DESTINATION "mingw/include/sys")
install(FILES ${crt_sec_api_sys_include} DESTINATION "mingw/include/sec_api/sys")
install(FILES ${include_gdiplus} DESTINATION "mingw/include/gdiplus")
install(FILES ${include_gl} DESTINATION "mingw/include/GL")
install(FILES ${include_psdk_inc} DESTINATION "mingw/include/psdk_inc")
install(FILES ${include_wrl} DESTINATION "mingw/include/wrl")
install(FILES ${include_wrl_wrappers} DESTINATION "mingw/include/wrl/wrappers")
install(FILES ${include_h} DESTINATION "mingw/include/")
install(FILES ${include_hxx} DESTINATION "mingw/include/")
install(FILES ${include_idl} DESTINATION "mingw/include/")
install(FILES ${include_dlg} DESTINATION "mingw/include/")
install(FILES ${include_rh} DESTINATION "mingw/include/")
install(FILES ${ddk_include} DESTINATION "mingw/include/ddk")
install(FILES ${ddk_include_ddk} DESTINATION "mingw/include/ddk")
install(FILES ${dx_include_h} DESTINATION "mingw/include/")
install(FILES ${dx_include_idl} DESTINATION "mingw/include/")
install(FILES ${dx_include_inl} DESTINATION "mingw/include/")

add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/_mingw_ddk.h
					COMMAND sed "s/#if MINGW_HAS_DDK/#if 1/g" ${CMAKE_CURRENT_SOURCE_DIR}/crt/sdks/_mingw_ddk.h.in > ${CMAKE_CURRENT_BINARY_DIR}/_mingw_ddk.h)	

add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/_mingw_directx.h
					COMMAND sed "s/#if MINGW_HAS_DX/#if 1/g" ${CMAKE_CURRENT_SOURCE_DIR}/crt/sdks/_mingw_directx.h.in  > ${CMAKE_CURRENT_BINARY_DIR}/_mingw_directx.h)	

add_custom_target(mingw_gen_headers ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/_mingw_ddk.h ${CMAKE_CURRENT_BINARY_DIR}/_mingw_directx.h)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/_mingw_ddk.h ${CMAKE_CURRENT_BINARY_DIR}/_mingw_directx.h DESTINATION "mingw/include/sdks")